[package]
name = "nomic"
version = "4.2.1"
authors = [ "The Nomic Team <hello@nomic.io>" ]
edition = "2021"
default-run = "nomic"

[dependencies]
bitcoin = { version = "0.29.2", features = ["serde"] }
bitcoind = { version = "0.27.0", features = ["22_0"], optional = true }
orga = { git = "https://github.com/nomic-io/orga.git", rev = "decb463623f980d69dd14435c54f2a96f22ebd1e", features = ["merk-verify"] }
thiserror = "1.0.30"
ed = { git = "https://github.com/nomic-io/ed", rev = "9c0e206ffdb59dacb90f083e004e8080713e6ad8" }
clap = { version = "3.2.16", features = ["derive"], optional = true }
tokio = { version = "1.14.0", features = ["full"], optional = true }
base64 = "0.13.0"
js-sys = { version = "0.3.55" }
serde = "1.0.133"
serde_json = "1.0.74"
csv = { version = "1.1.6", optional = true }
bech32 = { version = "0.9.1" }
futures = "0.3.21"
toml_edit = "0.13.4"
tendermint-rpc = { version = "0.23.7", features = ["http-client"], optional = true}
bitcoincore-rpc-async = { package = "bitcoincore-rpc-async2", version = "4.0.1", optional = true }
bitcoin-script = "0.1.1"
warp = { version = "0.3.2", optional = true }
derive_more = "0.99.17"
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger", rev = "f9e35b6dbbf06de55222c944c9e1e176ce73b3a7" }
reqwest = { version = "0.11.16", optional = true }
rand = { version = "0.8.5", optional = true }
sha2 = "0.10.6"
bytes = "1.2.1"
serde-big-array = "0.4.1"
log = "0.4.17"
hex = "0.4.3"
toml = { version = "0.7.2", features = ["parse"] }
split-iter = "0.1.0"
home = {version = "0.5.5", optional = true }

[dev-dependencies]
bitcoin_hashes = "0.10.0"
serde_json = "1.0.68"
serde = "1.0.130"
mutagen = "0.1.2"
chrono = "0.4.19"

[features]
default = ["full", "feat-ibc"]
full = ["bitcoind", "bitcoincore-rpc-async", "clap", "tokio", "orga/merk-full", "orga/abci", "orga/state-sync", "csv", "warp", "rand", "reqwest", "tendermint-rpc", "home"]
feat-ibc = ["orga/feat-ibc"]
compat = []
testnet = []

[[bin]]
name = "nomic"

[[bin]]
name = "store-diff"

[[bin]]
name = "create-checkpoint"

[[bin]]
name = "create-airdrop-snapshot"
required-features = ["csv"]

[[bin]]
name = "append-airdrop-snapshot"
required-features = ["testnet"]
