[package]
name = "nomic"
version = "7.0.7"
authors = ["The Turbofish Team <hello@turbofish.org>"]
edition = "2021"
default-run = "nomic"

[dependencies]
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }
orga = { git = "https://github.com/oraichain/orga.git", rev = "e97030554dc6acb1093bfa24689de973f7914758", features = [
    "merk-verify",
] }
thiserror = "1.0.30"
ed = { git = "https://github.com/nomic-io/ed", rev = "9c0e206ffdb59dacb90f083e004e8080713e6ad8" }
clap = { version = "3.2.16", features = ["derive"], optional = true }
tokio = { version = "1.14.0", features = ["full"], optional = true }
base64 = "0.13.0"
js-sys = { version = "0.3.55" }
serde = "1.0.133"
serde_json = "1.0.74"
csv = { version = "1.1.6", optional = true }
bech32 = { version = "0.9.1" }
futures = "0.3.21"
toml_edit = "0.13.4"
tendermint-rpc = { version = "=0.32.0", features = [
    "http-client",
], optional = true }
bitcoincore-rpc-async = { package = "bitcoincore-rpc-async2", version = "4.0.2", optional = true }
bitcoin-script = "0.1.1"
warp = { version = "0.3.2", optional = true }
derive_more = "0.99.17"
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger", rev = "f9e35b6dbbf06de55222c944c9e1e176ce73b3a7" }
reqwest = { version = "0.11.16", optional = true, features = ["json"] }
rand = { version = "0.8.5", optional = true }
sha2 = "0.10.6"
bytes = "1.2.1"
serde-big-array = "0.4.1"
log = "0.4.17"
hex = "0.4.3"
toml = { version = "0.7.2", features = ["parse"] }
split-iter = "0.1.0"
chrono = "0.4.19"
tempfile = "3"
home = { version = "0.5.5", optional = true }
semver = "1.0.18"
ics23 = "0.10.2"
cosmos-sdk-proto = { version = "0.19.0", optional = true }
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"
secp256k1 = "0.20.3"
tiny-bip39 = "0.8.0"

[dev-dependencies]
bitcoind = { version = "0.27.0", features = ["22_0"] }
bitcoin_hashes = "0.11.0"
serde_json = "1.0.68"
serde = "1.0.130"
mutagen = "0.1.2"
curl = "0.4.44"
urlencoding = "2.1.2"
crossbeam-channel = "0.5.8"
chrono = "0.4.19"
serial_test = "2.0.0"
tempfile = "3.6.0"

[build-dependencies]
toml = { version = "0.7.2", features = ["parse"] }
semver = "1.0.18"

[features]
default = ["full", "feat-ibc"]
full = [
    "bitcoincore-rpc-async",
    "clap",
    "tokio",
    "orga/merk-full",
    "orga/abci",
    "orga/state-sync",
    "csv",
    "warp",
    "rand",
    "reqwest",
    "tendermint-rpc",
    "cosmos-sdk-proto",
    "home",
]
feat-ibc = ["orga/feat-ibc"]
testnet = []
faucet-test = []
devnet = []
legacy-bin = []

[profile.release]
overflow-checks = true

[[bin]]
name = "nomic"

[[bin]]
name = "store-diff"

[[bin]]
name = "create-checkpoint"

[[test]]
name = "bitcoin"
required-features = ["devnet"]
