[package]
name = "nomic"
version = "9.1.4"
authors = ["Nomic DAO Foundation <foundation@nomic.io>"]
edition = "2021"
default-run = "nomic"

[dependencies]
orga = { git = "https://github.com/nomic-io/orga.git", rev = "35988d76b58008e37794064c41f3d0ba102ca0c8", features = [
    "merk-verify",
    "feat-ibc",
] }
thiserror = "1.0.30"
ed = { git = "https://github.com/nomic-io/ed", rev = "a657be856792039ff60c2f67e7920e38cd3acffc" }
clap = { version = "3.2.16", features = ["derive"], optional = true }
tokio = { version = "1.39.2", features = ["full"], optional = true }
base64 = "0.13.0"
js-sys = { version = "0.3.55" }
serde = "1.0.208"
serde_json = "1.0.125"
csv = { version = "1.1.6", optional = true }
bech32 = { version = "0.9.1" }
futures = "0.3.21"
toml_edit = "0.13.4"
tendermint-rpc = { version = "0.38.0", features = [
    "http-client",
], optional = true }
bitcoincore-rpc-async = { package = "bitcoincore-rpc-async2", version = "4.0.2", optional = true }
bitcoin-script = "0.1.1"
warp = { version = "0.3.2", optional = true }
derive_more = "0.99.17"
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger", rev = "f9e35b6dbbf06de55222c944c9e1e176ce73b3a7" }
reqwest = { version = "0.11.16", optional = true, features = ["json"] }
rand = { version = "0.8.5", optional = true }
sha2 = "0.10.6"
bytes = "1.2.1"
serde-big-array = "0.4.1"
log = "0.4.17"
hex = "0.4.3"
toml = { version = "0.7.2", features = ["parse"] }
split-iter = "0.1.0"
chrono = "0.4.19"
tempfile = "3"
home = { version = "0.5.5", optional = true }
semver = "1.0.18"
ics23 = "0.12.0"
cosmos-sdk-proto = { version = "0.23.0", optional = true }
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"
prost = "0.13.3"
cosmrs = "0.14.0"
ripemd = "0.1.3"
frost-secp256k1-tr = { git = "https://github.com/ZcashFoundation/frost", rev = "20c2c98a931c564655e2a03719e19ba916e11545", features = [
    "nightly",
], optional = true }
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }
serde-hex = "0.1.0"
alloy-core = { version = "0.8.5", optional = true }
alloy-sol-types = { version = "0.8.5", optional = true }
alloy-contract = { version = "0.3.6", optional = true }
alloy-provider = { version = "0.3.6", optional = true }
alloy-signer-local = { version = "0.3.6", optional = true }
helios-consensus-core = { package = "consensus-core", git = "https://github.com/a16z/helios.git", version = "0.6.0", optional = true }
ethereum_ssz = { version = "0.6.0", optional = true }
ssz_types = { version = "0.7.0", optional = true }

[dev-dependencies]
bitcoind = { version = "0.27.0", features = ["22_0"] }
bitcoin_hashes = "0.11.0"
serde_json = "1.0.68"
serde = "1.0.130"
mutagen = "0.1.2"
curl = "0.4.44"
urlencoding = "2.1.2"
crossbeam-channel = "0.5.8"
chrono = "0.4.19"
serial_test = "2.0.0"
tempfile = "3.12.0"
alloy-node-bindings = "0.3.6"

[build-dependencies]
toml = { version = "0.7.2", features = ["parse"] }
semver = "1.0.18"
glob = "0.3.1"

[features]
default = ["full", "testnet", "ethereum-full", "babylon"]
full = [
    "bitcoincore-rpc-async",
    "clap",
    "tokio",
    "orga/merk-full",
    "orga/abci",
    "orga/state-sync",
    "csv",
    "warp",
    "rand",
    "reqwest",
    "tendermint-rpc",
    "cosmos-sdk-proto",
    "home",
]
testnet = ["ethereum", "babylon"]
devnet = []
legacy-bin = []
signet = []
ethereum = [
    "alloy-core",
    "alloy-core/dyn-abi",
    "alloy-core/json-abi",
    "alloy-sol-types",
    "ethereum_ssz",
    "ssz_types",
]
ethereum-full = [
    "ethereum",
    "alloy-contract",
    "alloy-provider",
    "alloy-provider/anvil-node",
    "alloy-signer-local",
    "helios-consensus-core",
]
frost = ["frost-secp256k1-tr"]
babylon = ["frost"]

[profile.release]
overflow-checks = true

[[bin]]
name = "nomic"

[[bin]]
name = "create-checkpoint"

[[test]]
name = "bitcoin"
required-features = ["devnet"]
