[package]
name = "nomic-cli"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
relayer = { path = "../relayer" }
nomic-chain = { path = "../chain/chain" }
nomic-worker = { path = "../worker" }
dirs = "2.0.2"
zip = "0.5.5"
reqwest = { version = "0.10.3", features = ["blocking"] }
hex-literal = "0.2.1"
sha2 = "0.8.1"
