[package]
name = "nomic-cli"
version = "0.2.1"
authors = ["The Nomic Team <hello@nomic.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
relayer = { path = "../relayer" }
nomic-bitcoin = { path = "../core/bitcoin" }
nomic-chain = { path = "../chain/chain" }
nomic-client = { path = "../chain/client" }
nomic-signatory = { path = "../signatory" }
nomic-primitives = { path = "../core/primitives" }
nomic-signatory-set = { path = "../core/signatory-set" }
nomic-worker = { path = "../worker" }
dirs = "2.0.2"
zip = "0.5.5"
reqwest = { version = "0.10.3", features = ["blocking"] }
hex-literal = "0.2.1"
sha2 = "0.8.1"
pretty_env_logger = "0.4.0"
is_executable = "0.1.2"
base64 = "0.12.0"
rand = "0.6"
hex = "0.4.2"
colored = "1.9.3"
bech32 = "0.7.2"
failure = "=0.1.6"

[dependencies.log]
version = "0.4.8"
features = ["max_level_debug", "release_max_level_info"]

[dependencies.secp256k1]
version = "0.17.2"
features = ["rand"]

[[bin]]
name = "nomic"
path = "./src/main.rs"
