[package]
name = "relayer"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

[dependencies]
nomic-primitives = { path = "../core/primitives" }
nomic-client = { path = "../chain/client" }
bitcoincore-rpc = "0.8.0-rc1"
bitcoin = "^0.19.1"
tendermint = { git = "https://github.com/interchainio/tendermint-rs", rev = "0b9450ddcd00a6ed39c8c6b0931ef9c8e6c86e4b" }

