[package]
name = "relayer"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

[dependencies]
nomic-primitives = { path = "../core/primitives" }
nomic-client = { path = "../chain/client" }
nomic-bitcoin = { path = "../core/bitcoin" }
nomic-signatory-set = { path = "../core/signatory-set" }
tendermint = { git = "https://github.com/interchainio/tendermint-rs", rev = "0b9450ddcd00a6ed39c8c6b0931ef9c8e6c86e4b" }
log = "0.4.8"
failure = "0.1.7"
simple-server = "0.4.0"

