[package]
name = "nomic-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "tls"] }
nomic = { path = "..", default-features = false, features = [
    "full",
    "feat-ibc",
    "testnet",
] }
hex = "0.4.3"
tendermint-rpc = { version = "=0.23.7", features = ["http-client"] }
tendermint = "=0.23.7"
base64 = "0.13.0"
serde = "1.0.136"
serde_json = "1.0.78"
lazy_static = "1.4.0"
tokio = "1.19.2"
