[package]
name = "nomic-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "tls"] }
nomic = { path = "..", default-features = false, features = [
    "full",
    "testnet",
] }
hex = "0.4.3"
tendermint-rpc = { version = "=0.23.7", features = ["http-client"] }
tendermint = "=0.23.7"
tendermint-proto = "=0.23.9"
ibc = { version = "0.54.0", features = ["borsh"] }
ibc-proto = { version = "0.47.0", default-features = false, features = [
    "std",
    "borsh",
    "serde",
] }
base64 = "0.13.0"
serde = "1.0.136"
serde_json = "1.0.78"
lazy_static = "1.4.0"
tokio = "1.19.2"
chrono = { version = "0.4.31", features = ["serde"] }
sha2 = "0.10.6"
bech32 = { version = "0.9.1" }
