[package]
name = "nomic-signatory"
version = "0.1.0"
authors = ["The Nomic Team <hello@nomic.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomic-client = { path = "../chain/client" }
nomic-primitives = { path = "../core/primitives" }
nomic-signatory-set = { path = "../core/signatory-set" }
nomic-bitcoin = { path = "../core/bitcoin" }
secp256k1 = "0.17.2"
serde_json = "1.0.46"
base64 = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.8"
