[package]
name = "nomic-wasm"
version = "0.4.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.78"
nomic = { path = "..", default-features = false }
async-trait = "0.1.52"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.7"
base64 = "0.13.0"
js-sys = "0.3.55"
hex = "0.4.3"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Location',
]
