[package]
name = "nomic-worker"
version = "0.1.0"
authors = ["The Nomic Team <hello@nomic.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.0"
base64 = "0.11.0"
rand = "0.7.2"
nomic-client = { path = "../chain/client"}
nomic-work = { path = "../core/work"}
log = "0.4.8"


