[package]
name = "nomic-chain"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orga = { git = "https://github.com/nomic-io/orga", rev = "d7328eebc36c65479cfddcd15e86c1fc25291525", features = ["merk", "abci"] }
nomic-primitives = { path = "../../core/primitives" }
nomic-work = { path = "../../core/work" }
nomic-bitcoin = { path = "../../core/bitcoin" }
nomic-signatory-set = { path = "../../core/signatory-set" }
byteorder = "1.3.2"
serde = { version = "1.0.100", features = [ "derive" ] }
serde_derive = "1.0.100"
bincode = "1.2.0"
serde_json = "1.0.46"
merk = "1.0.0"
sha2 = "0.8.0"
failure = "=0.1.6"
secp256k1 = "0.17.2"
lazy_static = "1.4.0"
log = "0.4.8"

[dev-dependencies]
protobuf = "2.10.1"

