[package]
name = "nomic-client"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

[dependencies]
bitcoin = { version = "^0.19.1", features=["serde"]}
nomic-primitives = { path = "../../core/primitives" }
nomic-chain = { path = "../chain" }
nomic-work = { path = "../../core/work" }
bincode = "1.2.0"
serde_derive = "=1.0.98"
serde = { version = "=1.0.98", features=["derive"]}
tendermint = { git = "https://github.com/interchainio/tendermint-rs", rev = "0b9450ddcd00a6ed39c8c6b0931ef9c8e6c86e4b" }
serde_json = "1.0.41"
base64 = "0.11.0"
hex = "0.4.0"
reqwest = {version = "0.10.0-alpha.2", features=["blocking", "json"]}
failure = "0.1.6"

[dev-dependencies]
bitcoincore-rpc = "0.8.0-rc1"
