[package]
name = "nomic-client"
version = "0.1.0"
authors = ["The Nomic Team <hello@nomic.io>"]
edition = "2018"

[dependencies]
nomic-primitives = { path = "../../core/primitives" }
nomic-chain = { path = "../chain" }
nomic-work = { path = "../../core/work" }
nomic-bitcoin = { path = "../../core/bitcoin" }
nomic-signatory-set = { path = "../../core/signatory-set" }
bincode = "1.2.0"
serde_derive = "1.0.100"
serde = { version = "1.0.100", features=["derive"]}
tendermint = { git = "https://github.com/nomic-io/tendermint-rs" }
serde_json = "1.0.46"
base64 = "0.11.0"
hex = "0.4.0"
reqwest = {version = "0.10.0-alpha.2", features=["blocking", "json"]}
failure = "=0.1.6"
