[package]
name = "nomic-primitives"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

[dependencies]
nomic-bitcoin = { path = "../bitcoin" }
serde = { version= "1.0.104", features = ["derive"] }
failure = "=0.1.6"
bincode = "1.2.1"
sha2 = "0.8.1"
orga = { git = "https://github.com/nomic-io/orga", rev = "0759a5f9933e792f2a61179f29727051c4ebab4d" }
secp256k1 = "0.17.2"
