[package]
name = "nomic-primitives"
version = "0.1.0"
authors = ["The Nomic Team <hello@nomic.io>"]
edition = "2018"

[dependencies]
nomic-bitcoin = { path = "../bitcoin" }
serde = { version= "1.0.104", features = ["derive"] }
failure = "=0.1.6"
bincode = "1.2.1"
sha2 = "0.8.1"
orga = { git = "https://github.com/nomic-io/orga", rev = "7761f6e2cbcb0bb6acd96f1cc91c56b38e2eda39" }
secp256k1 = "0.17.2"
