[package]
name = "nomic-signatory-set"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"

[dependencies]
failure = "=0.1.6"
nomic-bitcoin = { path = "../bitcoin" }
nomic-primitives = { path = "../primitives" }
bitcoin-script = "0.1.1"
bitcoin = "0.23.0"
serde_json = "1.0.48"
serde = "1.0.104"
bincode = "1.2.1"
orga = { git = "https://github.com/nomic-io/orga", rev = "2498df8f5e7871b61cd7c0812ee1b6b3a80569be" }

[dev-dependencies]
secp256k1 = "0.17.2"
