[package]
name = "nomic-signatory-set"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"

[dependencies]
failure = "=0.1.6"
nomic-bitcoin = { path = "../bitcoin" }
nomic-primitives = { path = "../primitives" }
bitcoin-script = "0.1.1"
bitcoin = "0.23.0"
serde_json = "1.0.48"
serde = "1.0.104"
bincode = "1.2.1"
orga = { git = "https://github.com/nomic-io/orga", rev = "0759a5f9933e792f2a61179f29727051c4ebab4d" }

[dev-dependencies]
secp256k1 = "0.17.2"
