[package]
name = "make-checkpoint-header"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomic-bitcoin = { path = "../../core/bitcoin" }
serde_json = "1.0.48"
